tests/errors/maskr_negative.f90
program maskr_negative
   print*, maskr(-24)
end program
